# TTM-AI

./: .env.example  .gitignore  README.md  migration_guide.md  pyproject.toml
brain/: __init__.py
brain/constraints/: __init__.py  base.py  builder.py  constraint_set.py  factory.py  registry.py
brain/graph/: __init__.py  builder.py  metrics.py  visualizer.py
brain/models/: __init__.py  assignment.py  conflict.py  constraint.py  curriculum.py  exceptions.py  faculty.py  room.py  scheduled_assignment.py  score.py  section.py  slot.py  subject.py  teaching_requirement.py  timetable.py
brain/presolver/: __init__.py  dsatur.py
brain/problem/: __init__.py  instance_builder.py  instance_serializer.py  instance_validator.py  scheduling_instance.py
brain/scheduler/: __init__.py  greedy_scheduler.py
brain/session/: __init__.py  session.py  session_factory.py  session_generator.py  session_statistics.py
brain/solver/: __init__.py  base_solver.py  exceptions.py  (+8 more)
output/: architecture_report.md  dsatur_bipartite_graph.graphml  dsatur_cycle_graph.graphml  dsatur_multiple_clashes_graph.graphml  dsatur_partial_graph.graphml  dsatur_partial_matrix.csv  dsatur_star_matrix.csv  dsatur_wheel_graph.graphml  faculty_clash_graph.graphml  multiple_clashes_graph.graphml  mypy_results.txt  no_clashes_graph.graphml  no_clashes_matrix.csv  room_clash_graph.graphml  room_clash_matrix.csv  ruff_results.txt  section_clash_graph.graphml  single_assignment_graph.graphml  single_assignment_matrix.csv  summary.txt  test_results.txt  test_results_final.txt  test_results_with_graphs.txt
(+26 files in other folders)
